--- a/HitomiScrollViewerLib/Views/SearchPageViews/DownloadItem.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPageViews/DownloadItem.xaml
@@ -8,15 +8,16 @@
     mc:Ignorable="d"
     
     x:DefaultBindMode="OneWay"
-    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-    CornerRadius="{StaticResource OverlayCornerRadius}"
-    BorderThickness="1"
-    Padding="16"
     IsEnabled="{x:Bind ViewModel.IsEnabled}"
     >
     <Grid ColumnSpacing="8"
-          RowSpacing="4">
+          RowSpacing="4"
+          Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+          BorderBrush="{ThemeResource ControlElevationBorderBrush}"
+          CornerRadius="{StaticResource OverlayCornerRadius}"
+          BorderThickness="1"
+          Padding="16"
+          >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
@@ -42,7 +43,9 @@
                 HorizontalAlignment="Stretch"
                 Click="{x:Bind ViewModel.DownloadToggleButton_Clicked, Mode=OneTime}"
                 ToolTipService.ToolTip="{x:Bind ViewModel.DownloadToggleButtonToolTip}"
-                />
+                >
+            <SymbolIcon Symbol="{x:Bind ViewModel.DownloadToggleButtonSymbol}"/>
+        </Button>
         <Button Grid.Row="0" Grid.Column="2"
                 x:Uid="/DownloadItem/CancelBtn"
                 HorizontalAlignment="Stretch"
