--- a/HitomiScrollViewerLib/Views/TagFilterEditor.xaml
+++ b/HitomiScrollViewerLib/Views/TagFilterEditor.xaml
@@ -7,6 +7,7 @@
     xmlns:entities="using:HitomiScrollViewerLib.Entities"
     xmlns:views="using:HitomiScrollViewerLib.Views"
     xmlns:models="using:HitomiScrollViewerLib.Models"
+    xmlns:daos="using:HitomiScrollViewerLib.DAOs"
     mc:Ignorable="d"
     ColumnSpacing="8"
     >
@@ -29,7 +30,7 @@
     <ComboBox DisplayMemberPath="Name"
               HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
               SelectedItem="{x:Bind ViewModel.SelectedTagFilter, Mode=TwoWay}"
-              ItemsSource="{x:Bind ViewModel.TagFilters, Mode=OneWay}">
+              ItemsSource="{x:Bind daos:TagFilterDAO.LocalTagFilters}">
     </ComboBox>
     <Button Command="{x:Bind ViewModel.SaveButtonCommand}">
         <SymbolIcon Symbol="Save"/>
