--- a/HitomiScrollViewerLib/Views/TagFilterEditor.xaml
+++ b/HitomiScrollViewerLib/Views/TagFilterEditor.xaml
@@ -4,10 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:entities="using:HitomiScrollViewerLib.Entities"
-    xmlns:views="using:HitomiScrollViewerLib.Views"
-    xmlns:models="using:HitomiScrollViewerLib.Models"
-    xmlns:daos="using:HitomiScrollViewerLib.DAOs"
     mc:Ignorable="d"
     ColumnSpacing="8"
     >
@@ -30,7 +26,7 @@
     <ComboBox DisplayMemberPath="Name"
               HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
               SelectedItem="{x:Bind ViewModel.SelectedTagFilter, Mode=TwoWay}"
-              ItemsSource="{x:Bind daos:TagFilterDAO.LocalTagFilters}">
+              ItemsSource="{x:Bind ViewModel.TagFilterDAO.LocalTagFilters}">
     </ComboBox>
     <Button Command="{x:Bind ViewModel.SaveButtonCommand}">
         <SymbolIcon Symbol="Save"/>
