--- a/HitomiScrollViewerLib/Views/BrowsePageViews/CandidateSortItemView.xaml
+++ b/HitomiScrollViewerLib/Views/BrowsePageViews/CandidateSortItemView.xaml
@@ -12,6 +12,6 @@
         <ColumnDefinition Width="Auto"/>
     </Grid.ColumnDefinitions>
     <TextBlock x:Name="SortItemTextBlock"
-               Text="{x:Bind ViewModel.GallerySort.DisplayName, Mode=OneWay}"/>
+               Text="{x:Bind ViewModel.GallerySort.DisplayName}"/>
     <SymbolIcon Symbol="Add"/>
 </Grid>
