--- a/HitomiScrollViewerLib/Views/BrowsePageViews/GalleryBrowseItem.xaml
+++ b/HitomiScrollViewerLib/Views/BrowsePageViews/GalleryBrowseItem.xaml
@@ -91,7 +91,8 @@
                 </DataTemplate>
             </ItemsRepeater.ItemTemplate>
         </ItemsRepeater>
-        <ItemsRepeater ItemsSource="{x:Bind ViewModel.TagItemsRepeaterVMs}">
+        <ItemsRepeater ItemsSource="{x:Bind ViewModel.TagItemsRepeaterVMs}"
+                       Margin="8">
             <ItemsRepeater.Layout>
                 <StackLayout Spacing="4"/>
             </ItemsRepeater.Layout>
